--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ghost Skate | Code: ghostskate25</title>
 
   <!-- Social preview -->
-  <meta property="og:title" content="Ghost Skate — tap to copy your code" />
+  <meta property="og:title" content="Ghost Skate — tap to copy 25% off discount code" />
   <meta property="og:description" content="Tap the image to copy: ghostskate25. Then head to drink-wax.com." />
   <meta property="og:image" content="promo.jpg" />
   <meta property="og:type" content="website" />
