--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Social preview -->
   <meta property="og:title" content="Ghost Skate — tap to copy 25% off discount code" />
-  <meta property="og:description" content="Tap the image to copy: ghostskate25. Then head to drink-wax.com." />
+  <meta property="og:description" content="Tap can to copy 25% off discount code: ghostskate25. Then head to drink-wax.com." />
   <meta property="og:image" content="promo.jpg" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
