--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <div class="wrap">
     <div class="img-wrap">
       <img id="couponImage" src="promo.jpg" alt="Tap to copy: ghostskate25" />
-      <div class="badge">Tap image to copy <span class="code">ghostskate25</span></div>
+      <div class="badge">Tap can to copy 25% off dicount code <span class="code">ghostskate25</span></div>
     </div>
 
     <div class="status" id="status"></div>
 
-    <p><a class="cta" href="https://drink-wax.com" target="_blank" rel="noopener">Go to drink-wax.com →</a></p>
+    <p><a class="cta" href="https://drink-wax.com" target="_blank" rel="noopener">Deliver me drink-wax.com →</a></p>
 
     <p class="hint">If copy doesn't work on your device, press and hold the image to copy the code manually.</p>
 
