--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Ghost Skate | 25% code: ghostskate2025</title>
 
   <!-- Social preview -->
-  <meta property="og:title" content="Tap can to copy 25% discount code: ghostskate2025" />
-  <meta property="og:description" content="Tap the can image to copy: ghostskate2025. Then head to DRINK-WAX.com." />
+  <meta property="og:title" content="Click for discount code" />
+  <meta property="og:description" content="Tap the can image to copy discount code Then head to DRINK-WAX.com." />
   <meta property="og:image" content="promo.jpg" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
