--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
   <div class="wrap">
     <div class="img-wrap">
-      <img id="couponImage" src="promo.jpg" alt="Tap can to copy 25% discount code: ghostskate2025" />
-      <div class="badge">Tap can to copy 25% discount code: <span class="code">ghostskate2025</span></div>
+      <img id="couponImage" src="promo.jpg" alt="Tap can to copy Alex's discount code" />
+      <div class="badge">Tap can to copy Alex's discount code: <span class="code">ghostskate2025</span></div>
     </div>
 
     <div class="status" id="status"></div>
