--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Ghost Skate | 25% code: ghostskate25</title>
 
   <!-- Social preview -->
-  <meta property="og:title" content="Click for discount code" />
-  <meta property="og:description" content="Tap the can for Alex's discount code." />
+  <meta property="og:title" content="Tap for Alex's Code" />
+  <meta property="og:description" content="Discount coming your way." />
   <meta property="og:image" content="promo.jpg" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -49,7 +49,7 @@
 
     <div class="status" id="status"></div>
 
-    <p><a class="cta" href="https://drink-wax.com" target="_blank" rel="noopener">Deliver me DRINK-WAX.com →</a></p>
+    <p><a class="cta" href="https://drink-wax.com" target="_blank" rel="noopener">Now go orde DRINK-WAX.com →</a></p>
 
     <p class="hint">If copy doesn't work on your device, press and hold the image to copy the code manually.</p>
 
