--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="status" id="status"></div>
 
-    <p><a class="cta" href="https://drink-wax.com" target="_blank" rel="noopener">Now go orde DRINK-WAX.com →</a></p>
+    <p><a class="cta" href="https://drink-wax.com" target="_blank" rel="noopener">Now go order DRINK-WAX.com →</a></p>
 
     <p class="hint">If copy doesn't work on your device, press and hold the image to copy the code manually.</p>
 
